--- a/media.css
+++ b/media.css
@@ -17,11 +17,11 @@ audio#musica{
     width: 310px;
 }
 
-iframe{
+video#video{
     display: block;
     position: relative;
-    top: 30px;
+    top: 50px;
     left: 82px;
     width: 450px;
-    
+  
 }
